# ml-platform

./: .dockerignore  .gitignore  Dockerfile.ml-app  Makefile  README.md  prompts.md  pyproject.toml
.github/workflows/: cd-pipeline-production.yml  cd-pipeline-staging.yml  ci-pipeline.yml
infrastructure/helm/kserve/: values-production.yaml  values-staging.yaml
infrastructure/helm/kubeflow/: values-production.yaml  values-staging.yaml
infrastructure/helm/prometheus-grafana/: values-production.yaml  values-staging.yaml
ml_platform/components/data_ingestion/: Dockerfile  component.yaml  ingest.py
ml_platform/components/data_validation/: Dockerfile  component.yaml  validate.py
ml_platform/components/drift_detection/: Dockerfile  component.yaml  detect_drift.py
ml_platform/components/feature_engineering/: Dockerfile  component.yaml  engineer_features.py
ml_platform/pipelines/: drift_retraining_pipeline.py  music_therapy_training_pipeline.py
ml_platform/serving/: Dockerfile.serving  kserve.yaml
notebooks/: 00_create_dummy_model.ipynb  01_data_exploration.ipynb  02_model_prototyping.ipynb  03_kubeflow_pipeline_sdk_example.ipynb  04_evidently_ai_drift_report.ipynb  addition_pipeline.yaml  dummy_model.joblib
observability/dashboards/: kserve_dashboard.json
scripts/: build_and_push_images.sh  run_pipeline_local.py  setup_dev_environment.sh
tests/: pytest.ini
tests/component_tests/: test_data_ingestion.py  test_feature_engineering.py
tests/pipeline_tests/: test_training_pipeline.py
tests/serving_tests/: test_kserve_endpoint.py  test_predictor.py
(+26 files in other folders)
